--- a/templates/account/forget_password.html
+++ b/templates/account/forget_password.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>消息页 -- 胡萝呗</title>
+    <title>忘记密码  -- 胡萝呗</title>
     <link rel="stylesheet" href="/static/css/default.css">
-    <meta http-equiv="refresh" content="3;URL=/account/index/">
 
     <script type="text/javascript" src="/static/js/vue.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
@@ -15,7 +14,7 @@
     <div class="header clearfix">
         <div class="container">
             <div class="where_am_i">
-                <a href="/">首页</a>
+                <a href="/">首页</a> >> <a href={{ url('account:forget_password') }}>忘记密码</a>
             </div>
             <div class="search_bar" id="search_bar" v-cloak>
                 <form action="/search" method="get">
@@ -36,9 +35,20 @@
         </div>
     </div>
     <div class="header_bottom">
-        <h1>重置密码成功</h1>
-        <p>3秒后前往首页</p>
-        <p><a href="/index/">点我立刻前往首页</a></p>
+
+        <form action ='{{ url('account:send_reset_email') }}' method="post">
+            <p>我记得用户名: <input type="text" name="username" autocomplete="off" placeholder="不超过12位"
+                           autofocus="autofocus" maxlength="12"></p>
+            <p>我记得邮箱: <input disabled type="text" name="email" autocomplete="off" placeholder="不超过30位"><del> 由于邮箱允许重复 现在只支持用户名找回方式</del></p>
+
+            <input type="submit" value="发送找回链接"> <input type="reset">
+            <div>
+                <a href="{{ url('account:register') }}"><p class='button_inline'>算了不找了 回注册页面</p></a>
+                <a href="{{ url('account:login') }}"><p class='button_inline'>突然想起来了 回登录页面</p></a>
+            </div>
+
+        </form>
+
     </div>
     <script src="/static/js/common.js"></script>
 </body>
