--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                     <input type="submit" value="登录" class="blue_white_button">
-                    <span class="blue_white_button">忘记密码</span>
+                    <span class="blue_white_button" @click="forget_password">忘记密码</span>
                 </li>
             </ul>
         </form>
