--- a/templates/account/reset.html
+++ b/templates/account/reset.html
@@ -2,31 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>重置密码</title>
-    <link rel="stylesheet" href="/static/css/global.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/login.css">
+    <title>重置密码 -- 胡萝呗</title>
+    <link rel="stylesheet" href="/static/css/default.css">
+
+    <script type="text/javascript" src="/static/js/vue.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
+    <script type="text/javascript" src="/static/js/pre_common.js"></script>
 </head>
 <body>
-    <form action ='/account/reset_done/' method="post">
-        <p>用户名: {{username}}</p>
-        <p><label for="password">输入密码: <input type="password" name='password' id="password" required minlength="6"
-                                              maxlength="20" placeholder="6-20位"></label></p>
-        <p><label for="repassword">重复密码: <input type="password" name='repassword' id="repassword" minlength="6"
-                                                required maxlength="20" placeholder="6-20位" onblur="check()"></label></p>
-        <script type="text/javascript">function check(){
-            if (document.getElementsByName('password')[0].value !== document.getElementsByName('repassword')[0].value) {
-                alert("您两次输入的密码不一样！请重新输入.");
-                document.getElementById("submit").disabled = true;
-                document.getElementsById('repassword').focus();
+    <div class="header clearfix">
+        <div class="container">
+            <div class="where_am_i">
+                <a href="/">首页</a> >> <a href={{ url('account:forget_password') }}>忘记密码</a>
+            </div>
+            <div class="search_bar" id="search_bar" v-cloak>
+                <form action="/search" method="get">
+                    <input type="text" class="search_input" :placeholder="search_place_holder" name="q" autocomplete="off">
+                    <input type="submit" value="提交">
+                </form>
+            </div>
+            <div class="user_info" id="user_info_bar" v-cloak>
+                <div v-if="username">
+                    <a class="username" href={{ url('account:profile') }}>[[ username ]]</a>
+                    <a id="logout" href={{ url('account:logout') }}>退出</a>
+                </div>
+                <div v-else>
+                    <a id="register" href={{ url('account:register') }}>注册</a>
+                    <a id="login" href={{ url('account:login') }}>登录</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header_bottom">
+        <form action ='/account/reset_done/' method="post">
+            <p><label for="username">用户名: <input id="username" value="{{ username }}" disabled></label> </p>
+            <input type="hidden" name="reset_password_salt" value="{{ reset_password_salt }}">
+            <input type="hidden" name="username" value="{{ username }}">
+            <p><label for="password">输入新密码: <input type="password" name='password' id="password" required minlength="6"
+                                                  maxlength="20" placeholder="6-20位"></label></p>
+            <p>
+                <label for="repassword">重复新密码: <input type="password" name='re_password' id="repassword" minlength="6"
+                                                    required maxlength="20" placeholder="6-20位" onblur="check()">
+                </label>
+                <p id="repassword_error_msg" class=""></p>
+            </p>
+            <script type="text/javascript">function check(){
+                if (document.getElementsByName('password')[0].value !== document.getElementsByName('re_password')[0].value) {
+                    let msg = document.getElementById('repassword_error_msg');
+                    msg.innerText = "您两次输入的密码不一样！请重新输入.";
+                    document.getElementById("submit").disabled = true;
+                    document.getElementById('repassword').focus();
+                }
+                else{
+                    document.getElementById("submit").disabled = false;
+                }
             }
-            else{
-                document.getElementById("submit").disabled = false;
-            }
-        }
-        </script>
-        <input type="submit" name="submit" id="submit" value="更改密码"> <input type="reset">
-    </form>
-    <a href="/account/regist/"><p class='regist'>算了不找了 回注册页面</p></a>
-    <a href="/account/login/"><p class='regist'>突然想起来了 回登录页面</p></a>
+            </script>
+            <input type="submit" id="submit" value="更改密码">
+            <input type="reset">
+        </form>
+    </div>
+    <script src="/static/js/common.js"></script>
+
 </body>
 </html>
