--- a/templates/message.html
+++ b/templates/message.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>消息页 -- 胡萝呗</title>
     <link rel="stylesheet" href="/static/css/default.css">
-    <meta http-equiv="refresh" content="3;URL=/account/index/">
 
     <script type="text/javascript" src="/static/js/vue.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
@@ -36,9 +35,9 @@
         </div>
     </div>
     <div class="header_bottom">
-        <h1>重置密码成功</h1>
-        <p>3秒后前往首页</p>
-        <p><a href="/index/">点我立刻前往首页</a></p>
+        <h1>
+            {{ msg }}
+        </h1>
     </div>
     <script src="/static/js/common.js"></script>
 </body>
