--- a/templates/jump.html
+++ b/templates/jump.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>消息页 -- 胡萝呗</title>
+    <title>跳转页 -- 胡萝呗</title>
     <link rel="stylesheet" href="/static/css/default.css">
-    <meta http-equiv="refresh" content="3;URL=/account/index/">
+    <meta http-equiv="refresh" content="5;URL=/index/">
 
     <script type="text/javascript" src="/static/js/vue.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
@@ -36,9 +36,7 @@
         </div>
     </div>
     <div class="header_bottom">
-        <h1>重置密码成功</h1>
-        <p>3秒后前往首页</p>
-        <p><a href="/index/">点我立刻前往首页</a></p>
+
     </div>
     <script src="/static/js/common.js"></script>
 </body>
