--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,70 +8,70 @@ html{
 .clearfix{
     clear:both;
 }
-div.header{
-    font-size: 0;
-    position:fixed;
-    margin: 0 auto;
-    width: 100%;
-    background-color:#7fd3cf;
-}
-div.header>div.container{
-    display:flex;
-    justify-content: center;
-}
-div.header>div.container>div{
-    font-size: 1rem ;
-    display:inline-block;
-    width: 8rem;
-    height: 2rem;
-    border:1px solid #BBBBBB;
-    text-align:center;
-    padding:0.133rem;
-    line-height: 2rem;
-    background-color: #a19393;
-    cursor:pointer;
-}
-div.container span{
-    display:block;
-}
-div.userinfo{
-    position:relative;
-    top:3rem;
-    padding: 0.3rem;
-    text-align: center;
-    width: 30rem;
-    height: 18rem;
-    /*height: auto;*/
-    border:1px dashed;
-    z-index:2;
-}
-div.userinfo>img{
-    border:1px dotted #FF4500;
-    cursor: pointer;
-    width: 8rem;
-    height: 8rem;
-}
-div.userinfo>img:hover{
-    box-shadow: 10px 10px 5px #AAAAAA;
-}
-div.container>div>div{
-    font-size: 0.8rem;
-    position:absolute;
-    border:1px dashed;
-    width: 8rem;
-    display:none;
-    overflow: hidden;
-    z-index:10;
-}
-div.container>div>div>*{
-    text-decoration: none;
-    cursor:pointer;
-    border:1px solid #BBBBBB;
-    padding:0.133rem;
-    background-color: #e0c9fa;
-    z-index:10;
-    display:block;
-}
+/*div.header{*/
+/*    font-size: 0;*/
+/*    position:fixed;*/
+/*    margin: 0 auto;*/
+/*    width: 100%;*/
+/*    background-color:#7fd3cf;*/
+/*}*/
+/*div.header>div.container{*/
+/*    display:flex;*/
+/*    justify-content: center;*/
+/*}*/
+/*div.header>div.container>div{*/
+/*    font-size: 1rem ;*/
+/*    display:inline-block;*/
+/*    width: 8rem;*/
+/*    height: 2rem;*/
+/*    border:1px solid #BBBBBB;*/
+/*    text-align:center;*/
+/*    padding:0.133rem;*/
+/*    line-height: 2rem;*/
+/*    background-color: #a19393;*/
+/*    cursor:pointer;*/
+/*}*/
+/*div.container span{*/
+/*    display:block;*/
+/*}*/
+/*div.userinfo{*/
+/*    position:relative;*/
+/*    top:3rem;*/
+/*    padding: 0.3rem;*/
+/*    text-align: center;*/
+/*    width: 30rem;*/
+/*    height: 18rem;*/
+/*    !*height: auto;*!*/
+/*    border:1px dashed;*/
+/*    z-index:2;*/
+/*}*/
+/*div.userinfo>img{*/
+/*    border:1px dotted #FF4500;*/
+/*    cursor: pointer;*/
+/*    width: 8rem;*/
+/*    height: 8rem;*/
+/*}*/
+/*div.userinfo>img:hover{*/
+/*    box-shadow: 10px 10px 5px #AAAAAA;*/
+/*}*/
+/*div.container>div>div{*/
+/*    font-size: 0.8rem;*/
+/*    position:absolute;*/
+/*    border:1px dashed;*/
+/*    width: 8rem;*/
+/*    display:none;*/
+/*    overflow: hidden;*/
+/*    z-index:10;*/
+/*}*/
+/*div.container>div>div>*{*/
+/*    text-decoration: none;*/
+/*    cursor:pointer;*/
+/*    border:1px solid #BBBBBB;*/
+/*    padding:0.133rem;*/
+/*    background-color: #e0c9fa;*/
+/*    z-index:10;*/
+/*    display:block;*/
+/*}*/
 div.sweets{
     position: relative;
     top:4rem;
