--- a/templates/crawlers/content.html
+++ b/templates/crawlers/content.html
@@ -9,9 +9,9 @@
     <script type="text/javascript" src="/static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/static/js/vue.min.js"></script>
     <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
-    <script type="text/javascript" src="/static/js/index.js/"></script>
+    <script type="text/javascript" src="/static/js/index.js"></script>
     <script type="text/javascript" src="/static/js/user_collections.js/"></script>
-    <script type="text/javascript" src="/static/js/pre_common.js/"></script>
+    <script type="text/javascript" src="/static/js/pre_common.js"></script>
 </head>
 <body>
     <div class="header clearfix">
@@ -128,6 +128,6 @@
         </p>
     </div>
 
-    <script type="text/javascript" src="/static/js/common.js/"></script>
+    <script type="text/javascript" src="/static/js/common.js"></script>
 </body>
 </html>
