--- a/templates/crawlers/book.html
+++ b/templates/crawlers/book.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
     <script type="text/javascript" src="/static/js/pre_common.js"></script>
-    <script type="text/javascript" src="/static/js/index.js/"></script>
+    <script type="text/javascript" src="/static/js/index.js"></script>
 </head>
 <body>
     <div class="header clearfix">
@@ -78,7 +78,7 @@
         </p>
     </div>
 
-    <script type="text/javascript" src="/static/js/upload.js/"></script>
-    <script type="text/javascript" src="/static/js/common.js/"></script>
+    <script type="text/javascript" src="/static/js/upload.js"></script>
+    <script type="text/javascript" src="/static/js/common.js"></script>
 </body>
 </html>
