--- a/templates/crawlers/books.html
+++ b/templates/crawlers/books.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
     <script type="text/javascript" src="/static/js/pre_common.js"></script>
-    <script type="text/javascript" src="/static/js/user_collections.js/"></script>
+    <script type="text/javascript" src="/static/js/user_collections.js"></script>
 </head>
 <body>
     <div class="header clearfix">
@@ -84,7 +84,7 @@
         </p>
     </div>
 
-    <script type="text/javascript" src="/static/js/upload.js/"></script>
-    <script type="text/javascript" src="/static/js/common.js/"></script>
+    <script type="text/javascript" src="/static/js/upload.js"></script>
+    <script type="text/javascript" src="/static/js/common.js"></script>
 </body>
 </html>
