--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
     <script type="text/javascript" src="/static/js/pre_common.js"></script>
+    <script type="text/javascript" src="/static/js/index.js"></script>
 </head>
 <body>
     <div class="header clearfix">
