--- a/templates/crawlers/books.html
+++ b/templates/crawlers/books.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
     <script type="text/javascript" src="/static/js/pre_common.js"></script>
     <script type="text/javascript" src="/static/js/user_collections.js"></script>
+    <script type="text/javascript" src="/static/js/index.js"></script>
 </head>
 <body>
     <div class="header clearfix">
