--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -40,7 +40,7 @@
 {#                <li><a href="{{ url('goods:carts') }}">购物车</a></li>#}
 {#                <li><a href="{{ url('users:address') }}">收货地址</a></li>#}
 {#                <li><a href="{{ url('users:orders') }}">全部订单</a></li>#}
-                <li><a href="{{ url('account:reset_password') }}">重置密码</a></li>
+{#                <li><a href="{{ url('account:reset_password') }}">重置密码</a></li>#}
             </ul>
         </div>
         <div class="content">
