--- a/templates/background/index.html
+++ b/templates/background/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>用户中心 -- 胡萝呗</title>
+    <title>后台 -- 胡萝呗</title>
     <link rel="stylesheet" href="/static/css/default.css">
+
     <script type="text/javascript" src="/static/js/vue.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
     <script type="text/javascript" src="/static/js/pre_common.js"></script>
+    <script type="text/javascript" src="/static/js/index.js"></script>
 </head>
 <body>
     <div class="header clearfix">
         <div class="container">
             <div class="where_am_i">
-                <a href="/">首页</a> >> <a href={{ url('account:profile') }}>用户中心</a>
+                <a href="/">首页</a> >> <a href={{ url('background') }}>后台</a>
             </div>
             <div class="search_bar" id="search_bar" v-cloak>
                 <form action="/search/" method="get">
@@ -36,7 +38,9 @@
     <div class="header_bottom">
         <div class="left_side_navigation">
             <ul>
-                <li><a href="{{ url('account:profile') }}" class="choosing">个人信息</a></li>
+{#                <li><a class="choosing">书籍管理</a></li>#}
+                <li><a href="{{ url('account:profile') }}" class="choosing">书籍管理</a></li>
+                <li><a href="{{ url('account:profile') }}" class=>内容管理</a></li>
 {#                <li><a href="{{ url('goods:carts') }}">购物车</a></li>#}
 {#                <li><a href="{{ url('users:address') }}">收货地址</a></li>#}
 {#                <li><a href="{{ url('users:orders') }}">全部订单</a></li>#}
@@ -64,28 +68,30 @@
                         <input type="button" @click="save_mobile" value="保存">
                         <span class="error_tip" v-show="show_mobile_msg" id="mobile_msg">[[ mobile_msg ]]</span>
                     </div>
-                    <div>
-                        <input type="checkbox" v-model="is_staff" disabled><span>员工</span>
-                    </div>
-                    <div>
-                        <input type="checkbox" v-model="is_superuser" disabled><span>管理员</span>
-                    </div>
                 </div>
-{#                <div class="browse_history">#}
-{#                    <h2>浏览记录:</h2>#}
-{#                    <div class="history" v-for="(sku, index) in all_history">#}
-{#                        <a :href="'/detail/' + sku.id">#}
-{#                            <img :src=sku.default_image alt="默认图片" class="sku_mini_image">#}
-{#                        </a>#}
-{#                        <span class="delete_history clickable" @click="delete_history(sku.id, index)">x</span>#}
-{#                        <div class="name">[[ sku.name ]]</div>#}
-{#                        <div class="price"><span>价格: </span>[[ sku.price ]]</div>#}
-{#                    </div>#}
-{#                </div>#}
+
             </div>
         </div>
     </div>
+
+    <div class="sweets">
+        <form name="drawcards" id="drawcards" method="post" action="/drawcards/">
+            <!--<button type="button" onclick="f1()">试试手气</button>-->
+            <button type="button" onclick="f2()">试试手气</button>
+            <button type="button" onclick="f3()">一会再试</button>
+            <span id="draw_result"></span>
+            {% for i in ret %}
+                {{i.name}}
+            {% endfor %}
+        </form>
+        <iframe id="iframe1" src="" width="0" height ="0" frameborder="0" >您的浏览器不支持呀</iframe>
+        <p>目前共有 {{counts}} 位注册用户</p>
+    </div>
+    <div class="bei_an">
+        <img src="https://csdnimg.cn/pubfooter/images/gongan.png" alt="备案图标" class="inline">
+        <a href="http://beian.miit.gov.cn/publish/query/indexFirst.action">京ICP备19036293号-1</a>
+    </div>
+
     <script src="/static/js/common.js"></script>
-    <script src="/static/js/profile.js"></script>
 </body>
 </html>
